GenericSetup Product Changelog

  GenericSetup 1.2 (unreleased)

    - ProfileRegistry: Added 'registerProfile' ZCML directive.
      Using the old registerProfile method in initialize() is now deprecated.
      See doc/profiles.txt for details.

    - ProfileRegistry: 'product' should now be the module name.
      For backwards compatibility 'product' is still first looked up in
      Products before searching the default module search path.

    - ZCTextIndex handler: Fixed 'indexed_attr' import.
      (http://www.zope.org/Collectors/CMF/436)

    - docs: Added 'Registering Profiles' section to profiles.txt.

    - Added support for PageTemplate import/export, modeled closely after
      existing PythonScript support

    - The dependency sorting was highly reliant on steps being added in the
      right order to work. If import step A depends on import step B which 
      depends on step C, and step C gets processed early, and they were 
      processed in the order A, C, B, then the dependency order would be 
      incorrect. This is now fixed by keeping tack of steps with unresolved
      dependencies, and trying again after inserting everything else.

  GenericSetup 1.1 (2006/04/16)

    - ZCatalog handler: Implemented the 'remove' directive for indexes.
      This allows to write extension profiles that remove or replace indexes.

    - getExportStepRegistry had the wrong security declaration

  GenericSetup 1.1-beta2 (2006/03/26)

    No changes - tag created to coincide with CMF 2.0.0-beta2

  GenericSetup 1.1-beta (2006/03/08)

    - Allowed subclasses of DAVAwareFileAdapter to override the filename
      in which the file is stored.

    - Added a doc directory including some basic documentation.

    - Made GenericSetup a standalone package independent of the CMF

    - Added 'for_' argument to profile registry operations.
      A profile may be registered and queried as appropriate to a specific