@@ -1,0 +1,14 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="genericsetup">
+
+  <!-- profiles -->
+
+  <genericsetup:registerProfile
+      name="default"
+      title="Sample Zope Site"
+      description="Shows how GenericSetup creates generic Zope objects."
+      />
+
+</configure>
