@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="foo" meta_type="Folder">
+ <property name="title">Sample Folder</property>
+</object>
