@@ -2,6 +2,8 @@ GenericSetup Product Changelog
 
   GenericSetup 1.2 (unreleased)
 
+    - docs: Added SampleSite demo product.
+
     - ProfileRegistry: Added 'registerProfile' ZCML directive.
       Using the old registerProfile method in initialize() is now deprecated.
       See doc/profiles.txt for details.
